RESOLVED FIXED88409
Ensure consistent order of evaluation in LLInt slow paths
https://bugs.webkit.org/show_bug.cgi?id=88409
Summary Ensure consistent order of evaluation in LLInt slow paths
Andy Wingo
Reported 2012-06-06 05:00:30 PDT
The patch to be attached fixes a failure in fast/js/exception-sequencing-binops.html on x86-64 Linux systems with GCC 4.7. The RHS of a % was getting evaluated before the LHS, because the toNumber() calls were not separated by a sequence point. Pretty amusing that order of evaluation in JS depended on order of evaluation in C++, no?
Attachments
Patch (5.07 KB, patch)
2012-06-06 05:02 PDT, Andy Wingo
no flags
Andy Wingo
Comment 1 2012-06-06 05:02:17 PDT
Andy Wingo
Comment 2 2012-06-06 05:11:05 PDT
Only the mac EWS will be relevant, as bug 88315 hasn't landed yet.
Geoffrey Garen
Comment 3 2012-06-06 10:06:34 PDT
Comment on attachment 145992 [details] Patch r=me
WebKit Review Bot
Comment 4 2012-06-06 11:59:51 PDT
Comment on attachment 145992 [details] Patch Clearing flags on attachment: 145992 Committed r119602: <http://trac.webkit.org/changeset/119602>
WebKit Review Bot
Comment 5 2012-06-06 11:59:57 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.